@@ -15,6 +15,7 @@
 #define ENABLE_GLIB_SUPPORT @ENABLE_GLIB_SUPPORT_VALUE@
 #define ENABLE_ICONDATABASE @ENABLE_ICONDATABASE_VALUE@
 #define ENABLE_JAVASCRIPT_DEBUGGER @ENABLE_JAVASCRIPT_DEBUGGER_VALUE@
+#define ENABLE_JIT @ENABLE_JIT_VALUE@
 #define ENABLE_MATHML @ENABLE_MATHML_VALUE@
 #define ENABLE_NOTIFICATIONS @ENABLE_NOTIFICATIONS_VALUE@
 #define ENABLE_OFFLINE_WEB_APPLICATIONS @ENABLE_OFFLINE_WEB_APPLICATIONS_VALUE@
