@@ -1,5 +1,16 @@
 2010-06-25  Lucas De Marchi  <lucas.demarchi@profusion.mobi>
 
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [CMake] Add option to enable JIT.
+        JIT is disabled by default, but now it's possible to enable it through
+        an option to CMake: -DENABLE_JIT will enable it.
+        https://bugs.webkit.org/show_bug.cgi?id=40936
+
+        * CMakeLists.txt: Add missing files and re-sort.
+
+2010-06-25  Lucas De Marchi  <lucas.demarchi@profusion.mobi>
+
         Reviewed by Gustavo Noronha Silva.
 
         [CMake] Remove unused variable in EFL build system. It was previously
